--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
-    "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev",
     "start": "node .output/server/index.mjs",
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint .",
@@ -16,14 +15,18 @@
     "@antfu/eslint-config": "^0.39.0",
     "@anu-vue/nuxt": "^0.14.0",
     "@iconify-json/carbon": "^1.1.16",
+    "@iconify-json/mdi": "^1.1.52",
+    "@iconify-json/mingcute": "^1.1.6",
+    "@iconify-json/ri": "^1.1.9",
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxt/devtools": "^0.5.0",
+    "@nuxt/image": "1.0.0-rc.1",
     "@nuxthq/ui": "^2.3.0",
     "@nuxtjs/color-mode": "^3.2.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "@unocss/eslint-config": "^0.51.13",
     "@unocss/nuxt": "^0.51.13",
-    "@vite-pwa/nuxt": "^0.0.9",
     "@vueuse/nuxt": "^10.1.2",
     "anu-vue": "^0.14.0",
     "base64url": "^3.0.1",
@@ -34,6 +37,7 @@
     "typescript": "^5.0.4",
     "ufo": "^1.1.2",
     "unocss-preset-daisy": "^4.0.0",
+    "vite-plugin-turbo-console": "^0.0.9",
     "vue-tsc": "^1.6.5"
   }
 }
