--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "anu-vue": "^0.14.0",
     "base64url": "^3.0.1",
     "consola": "^3.1.0",
+    "dayjs-nuxt": "^1.1.2",
     "eslint": "^8.41.0",
     "nuxt": "^3.5.3",
     "pinia": "^2.1.3",
     "typescript": "^5.0.4",
     "ufo": "^1.1.2",
     "vite-plugin-turbo-console": "^0.0.9",
+    "vue-sonner": "^0.3.2",
     "vue-tsc": "^1.6.5"
   }
 }
