--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxt/devtools": "^0.5.0",
     "@nuxt/image": "1.0.0-rc.1",
-    "@nuxthq/ui": "^2.3.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "@unocss/eslint-config": "^0.51.13",
     "@unocss/nuxt": "^0.51.13",
+    "@vercel/postgres": "^0.3.0",
+    "@vercel/postgres-kysely": "^0.3.0",
     "@vueuse/nuxt": "^10.1.2",
     "anu-vue": "^0.14.0",
     "base64url": "^3.0.1",
-    "consola": "^3.1.0",
     "dayjs-nuxt": "^1.1.2",
     "eslint": "^8.41.0",
+    "kysely": "^0.25.0",
     "nuxt": "^3.5.3",
     "pinia": "^2.1.3",
     "typescript": "^5.0.4",
