chore: migrate to `@nuxt/test-utils` alpha

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxt/devtools": "^0.6.1",
     "@nuxt/image": "1.0.0-rc.1",
+    "@nuxt/test-utils": "^3.9.0-alpha.1",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
@@ -33,17 +34,20 @@
     "@vercel/postgres": "^0.3.0",
     "@vercel/postgres-kysely": "^0.3.0",
     "@vite-pwa/nuxt": "^0.1.0",
+    "@vue/test-utils": "^2.4.3",
     "@vueuse/nuxt": "^10.2.0",
     "base64url": "^3.0.1",
     "dayjs-nuxt": "^1.1.2",
     "eslint": "^8.43.0",
     "kysely": "^0.25.0",
     "nuxt": "^3.5.3",
-    "nuxt-vitest": "^0.8.5",
     "pinia": "^2.1.4",
     "typescript": "^5.0.4",
     "ufo": "^1.1.2",
     "vite-plugin-turbo-console": "^0.0.9",
+    "vitest": "^1.0.4",
+    "vitest-environment-nuxt": "^1.0.0-alpha.1",
+    "vue": "^3.3.11",
     "vue-sonner": "^0.3.2",
     "vue-tsc": "^1.8.0"
   }
