--- a/package.json
+++ b/package.json
@@ -17,38 +17,38 @@
     "@anu-vue/nuxt": "^0.15.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.0",
-    "@iconify-json/carbon": "^1.1.16",
-    "@iconify-json/mdi": "^1.1.52",
-    "@iconify-json/mingcute": "^1.1.7",
-    "@iconify-json/ri": "^1.1.9",
-    "@iconify-json/twemoji": "^1.1.11",
-    "@nuxt/devtools": "^0.6.1",
-    "@nuxt/image": "1.0.0-rc.1",
-    "@nuxt/test-utils": "^3.9.0-alpha.3",
-    "@nuxtjs/color-mode": "^3.2.0",
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
-    "@pinia/nuxt": "^0.4.11",
-    "@unocss/eslint-config": "^0.53.1",
-    "@unocss/nuxt": "^0.53.1",
-    "@vercel/postgres": "^0.3.0",
-    "@vercel/postgres-kysely": "^0.3.0",
-    "@vite-pwa/nuxt": "^0.1.0",
+    "@antfu/eslint-config": "^2.4.6",
+    "@iconify-json/carbon": "^1.1.27",
+    "@iconify-json/mdi": "^1.1.63",
+    "@iconify-json/mingcute": "^1.1.14",
+    "@iconify-json/ri": "^1.1.18",
+    "@iconify-json/twemoji": "^1.1.15",
+    "@nuxt/devtools": "^1.0.6",
+    "@nuxt/image": "1.1.0",
+    "@nuxt/test-utils": "^3.9.0",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@unocss/eslint-config": "^0.58.0",
+    "@unocss/nuxt": "^0.58.0",
+    "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres-kysely": "^0.6.0",
+    "@vite-pwa/nuxt": "^0.3.6",
     "@vue/test-utils": "^2.4.3",
-    "@vueuse/nuxt": "^10.2.0",
+    "@vueuse/nuxt": "^10.7.0",
     "base64url": "^3.0.1",
-    "dayjs-nuxt": "^1.1.2",
-    "eslint": "^8.43.0",
-    "kysely": "^0.25.0",
-    "nuxt": "^3.5.3",
-    "pinia": "^2.1.4",
-    "typescript": "^5.0.4",
-    "ufo": "^1.1.2",
-    "vite-plugin-turbo-console": "^0.0.9",
-    "vitest": "^1.0.4",
-    "vitest-environment-nuxt": "^1.0.0-alpha.1",
-    "vue": "^3.3.11",
-    "vue-sonner": "^0.3.2",
-    "vue-tsc": "^1.8.0"
+    "dayjs-nuxt": "^2.1.9",
+    "eslint": "^8.56.0",
+    "kysely": "^0.26.3",
+    "nuxt": "^3.8.2",
+    "pinia": "^2.1.7",
+    "typescript": "^5.3.3",
+    "ufo": "^1.3.2",
+    "vite-plugin-turbo-console": "^0.3.2",
+    "vitest": "^1.1.0",
+    "vitest-environment-nuxt": "^1.0.0",
+    "vue": "^3.3.13",
+    "vue-sonner": "^1.0.2",
+    "vue-tsc": "^1.8.26"
   }
 }
