--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@anu-vue/nuxt": "^0.15.2"
+    "@anu-vue/nuxt": "^0.15.2",
+    "@radix-icons/vue": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "radix-vue": "^1.2.5",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.6",
@@ -28,6 +34,7 @@
     "@nuxt/image": "1.1.0",
     "@nuxt/test-utils": "^3.9.0",
     "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/tailwindcss": "^6.10.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
     "@unocss/eslint-config": "^0.58.0",
@@ -43,6 +50,7 @@
     "kysely": "^0.26.3",
     "nuxt": "^3.8.2",
     "pinia": "^2.1.7",
+    "shadcn-nuxt": "^0.1.0",
     "typescript": "^5.3.3",
     "ufo": "^1.3.2",
     "vite-plugin-turbo-console": "^0.3.2",
