--- a/package.json
+++ b/package.json
@@ -17,47 +17,44 @@
   "dependencies": {
     "@anu-vue/nuxt": "^0.15.2",
     "@radix-icons/vue": "^1.0.0",
+    "@vueuse/core": "^10.7.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "radix-vue": "^1.2.5",
-    "tailwind-merge": "^2.2.0",
+    "clsx": "^2.1.0",
+    "radix-vue": "^1.3.2",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.6",
-    "@iconify-json/carbon": "^1.1.27",
-    "@iconify-json/mdi": "^1.1.63",
-    "@iconify-json/mingcute": "^1.1.14",
-    "@iconify-json/ri": "^1.1.18",
-    "@iconify-json/twemoji": "^1.1.15",
-    "@nuxt/devtools": "^1.0.6",
-    "@nuxt/image": "1.1.0",
-    "@nuxt/test-utils": "^3.9.0",
+    "@antfu/eslint-config": "^2.6.3",
+    "@iconify/json": "^2.2.176",
+    "@nuxt/devtools": "^1.0.8",
+    "@nuxt/image": "1.3.0",
+    "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/tailwindcss": "^6.10.3",
+    "@nuxtjs/tailwindcss": "^6.11.2",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
-    "@unocss/eslint-config": "^0.58.0",
-    "@unocss/nuxt": "^0.58.0",
-    "@vercel/postgres": "^0.5.1",
-    "@vercel/postgres-kysely": "^0.6.0",
-    "@vite-pwa/nuxt": "^0.3.6",
-    "@vue/test-utils": "^2.4.3",
-    "@vueuse/nuxt": "^10.7.0",
+    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres-kysely": "^0.7.2",
+    "@vite-pwa/nuxt": "^0.4.0",
+    "@vue/test-utils": "^2.4.4",
+    "@vueuse/nuxt": "^10.7.2",
     "base64url": "^3.0.1",
     "dayjs-nuxt": "^2.1.9",
     "eslint": "^8.56.0",
-    "kysely": "^0.26.3",
-    "nuxt": "^3.8.2",
+    "kysely": "^0.27.2",
+    "nuxt": "^3.10.0",
     "pinia": "^2.1.7",
-    "shadcn-nuxt": "^0.1.0",
+    "shadcn-nuxt": "^0.8.7",
+    "shadcn-vue": "^0.8.7",
     "typescript": "^5.3.3",
     "ufo": "^1.3.2",
-    "vite-plugin-turbo-console": "^0.3.2",
-    "vitest": "^1.1.0",
+    "unplugin-icons": "^0.18.3",
+    "unplugin-turbo-console": "^1.1.4",
+    "vitest": "^1.2.2",
     "vitest-environment-nuxt": "^1.0.0",
-    "vue": "^3.3.13",
-    "vue-sonner": "^1.0.2",
-    "vue-tsc": "^1.8.26"
+    "vue": "^3.4.15",
+    "vue-sonner": "^1.0.3",
+    "vue-tsc": "^1.8.27"
   }
 }
